<resources>
    <string name="app_name">Mushrooming</string>
    <!-- Strings related to login -->
    <string name="prompt_login" translatable="false">Login</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_register">Create account</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_species">Mushroom species</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_surname">Not a valid surname</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="no_species">Enter species first</string>
    <string name="no_state">Describe find state (e.g. whether new mushrooms are growing)</string>
    <string name="no_count">Enter how many mushrooms you have collected</string>
    <string name="passwords_match_fail">Passwords not match</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_user">Login failed due to incorrect credentials</string>
    <string name="login_failed_server">Login failed due to server inactivity, trying to log in again within %d</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Mushrooming</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_logout">Log out</string>

    <string name="logout_successful">You are logged out</string>
    <string name="reg_success">You are registered! Click link which has been sent to your mailbox to activate account</string>
    <string name="reg_fail">Registration failed!</string>
    <string name="logout_fail">Logout failed!</string>

    <string name="server_unavaiable">Server unavailable, try again later</string>
    <string name="no_network">Problem with network detected, check your connection</string>
    <string name="permission_denied">You must grant permission to use app</string>

    <string name="find_dialog">I found mushrooms!</string>
    <string name="visit_dialog">Oh, I see that you are visiting find</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add_fail">You must be in forest to add find</string>

    <string name="find_species">Species: </string>
    <string name="find_createdAt">Created at: </string>
    <string name="find_creator">Added by: </string>
    <string name="find_lastState">Last state: </string>
    <string name="find_lastVisit">Last visit at: </string>
    <string name="find_click">Tap to view visits</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_state">State of find</string>
    <string name="visit_amount">Amount of mushrooms:</string>
    <string name="visit_state">State of find:</string>
    <string name="visit_author">Created by:</string>
    <string name="visit_visited">Visited at:</string>
    <string name="menu_share">Share this app</string>
    <string name="location_disabled">Enable location first to use the application!</string>
    <string name="find_already_here">There is already a find here</string>
    <string name="location_unavailable">Problem with location service occurred</string>
</resources>
